crates/aranya-policy-compiler/tests/data/type_errors/struct_composition_non_struct_invalid_type_fail.policy
struct Foo { x int, y bool }
function baz(b bool) struct Foo {
    let new_foo = Foo {
        y: true,
        ...b
    }

    return new_foo
}
